--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -351,7 +351,7 @@
   </div>
 
   <!-- Resources -->
-  <h2>Resources of the file</h2>
+  <h2>changes in to the shyam branch</h2>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
