--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -5,6 +5,10 @@
 <body>
 <h1>Welcome to Angular projects</h1>
 
+<header style="background-color: #22a3b9;  height: 80px; width: 100%">  
+  <h1 style="font-size: 30px; color: white;text-align: center; padding-top: 15px;">Welcome to     MyFirstWebpage</h1>  
+</header>
+
 </body>
 </html>
 
